* 修复win/mac screenId获取 chooseDesktopMedia

--- a/src/remote.html
+++ b/src/remote.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <meta charset="utf-8">
 <style>
-  video { width: 960px; height: 540px; margin-top: 8px; }
+  video { width: 100%; margin-top: 8px; }
 </style>
 
 <div id="txtTargetId"></div>
