+ 添加readme + 添加host/port指定 * url协议 file: => app:

--- a/src/client.html
+++ b/src/client.html
@@ -2,10 +2,16 @@
 <meta charset="utf-8">
 <style>
   label { font-size: 0.7em; }
+  #txtHost { width: 100px; }
+  #txtPort { width: 50px; margin-bottom: 8px; }
   #txtTargetId { width: 140px; }
   #txtHostId { margin-top: 8px; }
 </style>
 
+<input id="txtHost" type="text" placeholder="Host" value="localhost" />
+<input id="txtPort" type="text" placeholder="Port" value="9000" />
+
+<br />
 <input id="txtTargetId" type="text" placeholder="ID to Connect..." />
 <button id="btnJoin">Join</button>
 <button id="btnShare">Share</button>
