--- a/src/remote.html
+++ b/src/remote.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <meta charset="utf-8">
 <style>
-  video { width: 100%; margin-top: 8px; }
+  #vidBox { padding: 10px; }
+  #vidScreen { width: 100%; margin-top: 8px; }
 </style>
 
 <div id="txtTargetId"></div>
