* 修复location.search参数识别 * 降低帧率 60=>6 传输效率才能接收 * 默认host 120.24.77.213 + 显示host/port信息 + 补充页面title * 完善readme peerjs/nw-gyp

--- a/src/client.html
+++ b/src/client.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <meta charset="utf-8">
+<title>Client</title>
 <style>
   label { font-size: 0.7em; }
   #txtHost { width: 100px; }
@@ -8,7 +9,8 @@
   #txtHostId { margin-top: 8px; }
 </style>
 
-<input id="txtHost" type="text" placeholder="Host" value="localhost" />
+<!-- <input id="txtHost" type="text" placeholder="Host" value="localhost" /> -->
+<input id="txtHost" type="text" placeholder="Host" value="120.24.77.213" />
 <input id="txtPort" type="text" placeholder="Port" value="9000" />
 
 <br />
