--- a/src/remote.html
+++ b/src/remote.html
@@ -1,10 +1,12 @@
 <!doctype html>
 <meta charset="utf-8">
+<title>Remote</title>
 <style>
   #vidBox { padding: 10px; }
   #vidScreen { width: 100%; margin-top: 8px; }
 </style>
 
+<div id="txtHostPort"></div>
 <div id="txtTargetId"></div>
 <video id="vidScreen" autoplay></video>
 
